# neuracore

./: .bumpversion.cfg  .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  cSpell.json  cleanup_daemon_db.sh  conftest.py  data_daemon_state.db  data_daemon_state.db-shm  data_daemon_state.db-wal  dockerfile  neuracore-dictionary.txt  pyproject.toml  setup.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-wheels.yaml  bump-version-centralized.yaml  bump-version.yaml  bump_and_deploy.yaml  check-label.yaml  ci.yaml  cleanup-pr-caches.yaml  code-freeze.yaml  deploy-centralized.yaml  deploy.yaml  docs-deploy.yml  integration-importer-production.yaml  integration-importer-staging.yaml  integration-ml-algorithm-performance-evaluate-prod.yaml  integration-ml-algorithm-performance-evaluate-staging.yaml  (+55 more)
admin/: update_google_colab.py
changelogs/: 8.0.2-changelog.md  pending-changelog.md
dataset_upload_scripts/: requirements.txt  robot_utils.py  upload_asu_table_top.py  upload_austin_buds.py  upload_berkeley_mvp.py  upload_lerobot_unitreeh1_fold_clothes.py  upload_taco_play.py
docs/: batch_size_autotuning.md  commandline.md  contribution_guide.md  creating_custom_algorithms.md  data-daemon-rewrite.md  data_daemon.md  dataset_importer.md  enironment_variable.md  environment_variable.md  limitations.md  model_construction.md  next.config.mjs  package.json  rust_data_daemon_development.md  training.md  tutorial.md  workflow_naming.md
docs-site/: go.mod  hugo.yaml
examples/: README.md  example_4k.py  example_data_collection_bigym.py  example_data_collection_vx300s.py  example_data_collection_vx300s_data_daemon.py  example_launch_training.py  example_launch_training_vx300.py  example_local_endpoint.py  example_local_endpoint_bigym.py  example_local_endpoint_no_robot.py  example_local_endpoint_policy.py  example_local_endpoint_vla.py  example_local_endpoint_vx300.py  example_local_endpoint_vx300s.py  example_local_endpoint_world_model.py  example_retrieve_dataset.py  example_server_endpoint.py  example_server_endpoint_vx300.py  example_validate_data_collection.py  example_video_streaming.py  example_view_dataset.py  example_yik.py  getting_started_with_neuracore.ipynb  logs.txt  results.txt  test_das.py  test_pi0_pretrained.py
neuracore/: __init__.py  api.py  auth.py  client_stream.py  core.py  dataset.py  endpoint.py  streaming.py  utils.py
neuracore_new_data_format/: README.md  pyproject.toml
neuracore_new_data_format/src/neuracore_new_data_format/: __init__.py  data_marshaller.py  dataset.py  main.py  ncdata.py  recording.py
neuracore_new_data_format/src/neuracore_new_data_format/data_marshaller/: data_marshaller.py  mcap_marshaller.py  sqlite_marshallers.py
neuracore_new_data_format/src/neuracore_new_data_format/protos/: neuracore_new_data_format.proto  neuracore_new_data_format_pb2.py  neuracore_new_data_format_pb2.pyi
neuracore_new_data_format/test/: test_camera_data.py  test_custom_data.py  test_joint_data.py  test_language_data.py
packaging/neuracore-data-daemon/: pyproject.toml
rust/: Cargo.toml
rust/data_daemon/: Cargo.toml
rust/data_daemon/migrations/: 0001_initial.sql  0002_session_uris.sql  0002_trace_completion_reported.sql  0003_cancelled_at.sql  0004_drop_trace_count.sql  0005_backend_stop_notified_at.sql  0006_recording_index.sql  0007_backend_cancel_notified_at.sql  0008_drop_backend_start_failed_at.sql  0009_drop_org_id.sql  0010_drop_unused_columns.sql
rust/data_daemon/src/: intervals.rs  main.rs
rust/data_daemon/src/api/: auth.rs  client.rs  mod.rs  models.rs
rust/data_daemon/src/cli/: coordinators.rs  launch.rs  launch_logging.rs  mod.rs  profile.rs  reset.rs  status.rs  stop.rs
rust/data_daemon/src/cloud/: cloud_files.rs  mod.rs  notifier.rs  org_watcher.rs  progress.rs  recording_cancel_notifier.rs  recording_reaper.rs  recording_start_notifier.rs  recording_stop_notifier.rs  registration.rs  status.rs  upload_transfer.rs  uploader.rs
rust/data_daemon/src/cloud/coordinators/: mod.rs  progress.rs  registration.rs  status.rs  upload_transfer.rs  uploader.rs
rust/data_daemon/src/cloud/notifiers/: mod.rs  notifier.rs  recording_cancel_notifier.rs  recording_start_notifier.rs  recording_stop_notifier.rs
rust/data_daemon/src/cloud/watchers/: config_watcher.rs  mod.rs  org_watcher.rs  recording_reaper.rs
rust/data_daemon/src/config/: env.rs  mod.rs  profile.rs
rust/data_daemon/src/connection/: mod.rs  monitor.rs  wakelock.rs
rust/data_daemon/src/encoding/: json_trace.rs  metadata.rs  mod.rs  nut_writer.rs  video_encoder.rs
rust/data_daemon/src/ipc/: listener.rs  mod.rs  node.rs
rust/data_daemon/src/lifecycle/: daemonize.rs  mod.rs  pidfile.rs  recovery.rs  shutdown.rs  signals.rs
rust/data_daemon/src/pipeline/: dispatcher.rs  json_writer.rs  mod.rs  trace_actor.rs
rust/data_daemon/src/state/: events.rs  mod.rs  schema.rs  store.rs  trace_event_database_writer.rs  trace_writer.rs
rust/data_daemon/src/storage/: budget.rs  mod.rs  paths.rs
rust/data_daemon_bridge/: Cargo.toml
rust/data_daemon_bridge/src/: lib.rs  nut_writer.rs  publisher.rs  query.rs  writer.rs
rust/data_daemon_ipc/: Cargo.toml
rust/data_daemon_ipc/src/: lib.rs  paths.rs
rust/data_daemon_producer/: Cargo.toml
rust/data_daemon_producer/src/: lib.rs  nut_writer.rs  paths.rs  publisher.rs  query.rs  writer.rs
rust/data_daemon_shared/: Cargo.toml
rust/data_daemon_shared/src/: lib.rs  paths.rs
rust/data_daemon_shared/src/config/: env.rs  mod.rs  profile.rs
rust/neuracore_webrtc/: Cargo.toml
rust/neuracore_webrtc/src/: broadcaster.rs  congestion.rs  consumer.rs  events.rs  lib.rs  media.rs  producer.rs  runtime.rs  transport.rs
rust/scripts/: build_webrtc_artefact.sh  build_wheel_artefacts.sh  patch_libdatachannel.sh  perf_logging_plugin.py  run_integration_tests.sh  run_performance_logging.sh
scripts/: annotate_gripper.py  gripper_states.json  import_nyu_rot.py
tests/: Dockerfile  __init__.py  conftest.py  test_core.py
(+723 files in other folders)
