[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "neuracore"
version = "7.14.1"
description = "Neuracore Client Library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Stephen James", email = "stephen@neuracore.com" },
]
keywords = ["robotics", "machine-learning", "ai", "client-library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "numpy>=2.0.0",
  "requests>=2.31.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0",
  "requests-oauthlib",
  "pydantic>=2.10",
  "av==14.2.0",
  "aiortc",
  "aiohttp-sse-client",
  "numpy-stl",
  "wget",
  "uvicorn[standard]",
  "fastapi",
  "psutil",
  "typer>=0.20.0",
  "neuracore-types>=6.0.1,<7.0.0",
  "ordered_set",
  "pyzmq==27.1.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "aiohttp>=3.9.0",
  "aiofiles>=23.0.0",
  "pyee==13.0.0",
]

[project.optional-dependencies]
examples = [
  "matplotlib>=3.3.0",
  "mujoco==2.3.7",
  "pyquaternion>=0.9.5",
]
mjcf = [
  "mujoco>3",
]
ml = [
  "torch",
  "torchvision",
  "transformers==4.57.3",
  "huggingface-hub>0.34.0,<0.36.0",
  "diffusers==0.35.1",
  "safetensors==0.6.2",
  "einops",
  "hydra-core>=1.3.0",
  "tensorboard>=2",
  "names-generator>=0.2.0",
]
import = [
  "lerobot==0.3.3",
  "huggingface-hub>0.34.0,<0.36.0",
  "tensorflow-datasets==4.9.9",
  "tensorflow==2.20.0",
  "tensorflow-metadata==1.17.3",
  "protobuf>=6.31.1,<6.33",
]

[dependency-groups]
dev = [
  "pytest>=6.2.5",
  "pytest-cov>=2.12.1",
  "pytest-asyncio>=0.15.1",
  "pytest-xdist",
  "requests-mock>=1.9.3",
  "pre-commit",
  "types-aiofiles",
]

[project.urls]
Homepage = "https://github.com/neuracoreai/neuracore"

[project.scripts]
neuracore = "neuracore.core.cli.app:main"
nc-data-daemon = "neuracore.data_daemon.main:main"

[tool.hatch.build.targets.wheel]
packages = ["neuracore"]

[tool.uv]
conflicts = [
  [
    { extra = "examples" },
    { extra = "mjcf" },
  ],
]
