[workspace]
members = ["data_daemon", "data_daemon_ipc", "data_daemon_producer"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "5"
iceoryx2 = "0.8"
libc = "0.2"
md-5 = "0.10"
nix = { version = "0.29", features = ["fs", "process", "signal"] }
once_cell = "1"
postcard = { version = "1", features = ["alloc"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
    "macros",
] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "signal",
    "sync",
    "time",
    "fs",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wiremock = "0.6"
