[package]
name = "data-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neuracore data daemon — Rust rewrite (see docs/data-daemon-rewrite.md)."

[[bin]]
name = "data-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
data_daemon_ipc = { path = "../data_daemon_ipc" }
dirs.workspace = true
iceoryx2.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
