[package]
name = "data-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neuracore data daemon — Rust rewrite (see docs/data-daemon-rewrite.md)."

[[bin]]
name = "data-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
data_daemon_ipc = { path = "../data_daemon_ipc" }
dirs.workspace = true
iceoryx2.workspace = true
nix.workspace = true
serde.workspace = true
# `preserve_order` keeps `serde_json::Map` insertion-ordered (via IndexMap)
# so the video-trace sidecar serialises with the same key ordering as the
# Python `json.dumps(dict, ...)` it replaces — required for byte-identical
# diffs against the legacy fixtures.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
