[package]
name = "data-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neuracore data daemon."

[[bin]]
name = "data-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
data_daemon_ipc = { path = "../data_daemon_ipc" }
dirs.workspace = true
iceoryx2.workspace = true
md-5.workspace = true
nix.workspace = true
reqwest.workspace = true
serde.workspace = true
# `preserve_order` keeps `serde_json::Map` insertion-ordered (via IndexMap)
# so the video-trace sidecar serialises with a stable, predictable key
# ordering.
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
