[package]
name = "data_daemon_ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared IPC envelope, payload, and service-name definitions for the Neuracore data daemon."

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
