[package]
name = "data_daemon_shared"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared definitions for the Neuracore data daemon: IPC envelope/service-name wire format, configuration model, and filesystem-path resolution."

[lib]
path = "src/lib.rs"

[dependencies]
# Shared recordings-root resolution (`paths`) needs the user's home directory so
# the daemon and the producer compute the same default root.
dirs.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
nix.workspace = true
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
